--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,12 @@
  	   		<groupId>org.springframework.cloud</groupId>
     		<artifactId>spring-cloud-starter-config</artifactId>
     	</dependency> 
+    	
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>5.1.6</scope>
+		</dependency>    	
 	</dependencies>
 	
 	<dependencyManagement>
