--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,10 @@ spring.application.name=webapp
 spring.mvc.view.prefix:/WEB-INF/jsp/
 spring.mvc.view.suffix:.jsp
 spring.datasource.url=jdbc:h2:file:./Database
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
 security.basic.enabled=false
 spring.profiles.active=production
+
+spring.datasource.url=jdbc:mysql://fleetman-database.clgojk0tvldj.us-east-1.rds.amazonaws.com/fleetman
+spring.datasource.username=fmdatabase
+spring.datasource.password=fmdatabase
+spring.datasource.driver-class-name=com.mysql.jbdc.Driver
