--- a/pom.xml
+++ b/pom.xml
@@ -94,8 +94,9 @@
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<scope>test</scope>
-		</dependency>    	
+			<scope>runtime</scope>
+		</dependency>
+		    	
 	</dependencies>
 	
 	<dependencyManagement>
