--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=webapp
 
 spring.mvc.view.prefix:/WEB-INF/jsp/
 spring.mvc.view.suffix:.jsp
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.hbm2ddl-auto=update
 security.basic.enabled=false
 spring.profiles.active=production
 
@@ -10,3 +10,4 @@ spring.datasource.url=jdbc:mysql://fleetman-database.clgojk0tvldj.us-east-1.rds.
 spring.datasource.username=fmdatabase
 spring.datasource.password=fmdatabase
 spring.datasource.driver-class-name=com.mysql.jbdc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
