--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,4 @@ spring.profiles.active=production
 spring.datasource.url=jdbc:mysql://fleetman-database.clgojk0tvldj.us-east-1.rds.amazonaws.com/fleetman
 spring.datasource.username=fmdatabase
 spring.datasource.password=fmdatabase
-spring.datasource.driver-class-name=com.mysql.jbdc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jbdc.Driver
