--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,11 +3,11 @@ spring.application.name=webapp
 spring.mvc.view.prefix:/WEB-INF/jsp/
 spring.mvc.view.suffix:.jsp
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 security.basic.enabled=false
 spring.profiles.active=production
 
 spring.datasource.url=jdbc:mysql://fleetman-database.clgojk0tvldj.us-east-1.rds.amazonaws.com/fleetman
 spring.datasource.username=fmdatabase
 spring.datasource.password=fmdatabase
-spring.datasource.driver-class-name=com.mysql.cj.jbdc.Driver
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
